istiofiles/ga-cheese-quizz-question.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cheese-quizz-question-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - cheese-quizz-question.apps.cluster-fdee.fdee.example.opentlc.com
