istiofiles/dr-cheese-quizz-question.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cheese-quizz-question
spec:
  host: cheese-quizz-question
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
