istiofiles/vs-cheese-quizz-question-all-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cheese-quizz-question
spec:
  hosts:
  - cheese-quizz-question
  - cheese-quizz-question.apps.cluster-fdee.fdee.example.opentlc.com
  gateways:
  - cheese-quizz-question-gateway
  http:
  - route:
    - destination:
        host: cheese-quizz-question
        subset: v1
      weight: 33
    - destination:
        host: cheese-quizz-question
        subset: v2
      weight: 33
    - destination:
        host: cheese-quizz-question
        subset: v3
      weight: 34
