istiofiles/vs-cheese-quizz-question-all-retry-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cheese-quizz-question
spec:
  hosts:
  - cheese-quizz-question
  http:
  - timeout: 1.000s
    retries:
      attempts: 5
      perTryTimeout: 100ms
      retryOn: 'gateway-error,connect-failure,refused-stream'
    route:
    - destination:
        host: cheese-quizz-question
        subset: v1
      weight: 33
    - destination:
        host: cheese-quizz-question
        subset: v2
      weight: 33
    - destination:
        host: cheese-quizz-question
        subset: v3
      weight: 34
