istiofiles/vs-cheese-quizz-question-v1-70-v2-30.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cheese-quizz-question
spec:
  hosts:
  - cheese-quizz-question
  http:
  - route:
    - destination:
        host: cheese-quizz-question
        subset: v1
      weight: 70
    - destination:
        host: cheese-quizz-question
        subset: v2
      weight: 30
