istiofiles/vs-cheese-quizz-question-v1-v2-canary.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cheese-quizz-question
spec:
  hosts:
  - cheese-quizz-question
  http:
  - match:
    - headers:
        x-channel:
          exact: canary
    route:
    - destination:
        host: cheese-quizz-question
        subset: v2
  - route:
    - destination:
        host: cheese-quizz-question
        subset: v1
